# cli-market-core

./: .commitmsg  .coverage  .env.example  .gitignore  AGENTS.md  BACKEND_CHANGES.md  HANDOFF.md  INSTRUCCIONES.md  README.md  WORLD_CHANGES.md  dashboard_glossary.py  dashboard_quality.py  dashboard_renderer.py  dashboard_view_model.py  data_v1_service.py  market_alerts.py  market_basket.py  market_billing.py  market_core.py  market_db.py  market_enrich_sources.py  market_enrich_subcategory.py  market_health_alert.py  market_indicators.py  market_intel_agent.py  market_mcp.py  market_security.py  market_spread.py  market_stats.py  market_stores.py  market_units.py  price_confidence.py  pyproject.toml  retailer_onboarding.py  server.json  source_health.py  store_credentials.py
.github/workflows/: ci.yml  publish-pypi.yml
market_connectors/: __init__.py  base.py  email_outbound.py  gmail_drafts.py  http_retry.py  lemon_payments.py  mercadopago_payments.py  paypal_payments.py  shopify.py  sunat_invoicing.py  vtex.py  wise_payments.py  woocommerce.py
market_core/: __init__.py  api_routes.py  auth_tokens.py  commerce_capabilities.py  dashboard_glossary.py  dashboard_renderer.py  dashboard_view_model.py  data_v1_service.py  demo_tokens.py  dev_app.py  golden_taxonomy.py  health_stats.py  intel_jobs.py  market_action_links.py  market_alerts.py  market_basket.py  market_billing.py  market_core.py  market_db.py  market_ecosystem.py  market_enrich_sources.py  market_enrich_subcategory.py  market_feature_flags.py  market_food_match.py  market_geo_currency.py  market_health_alert.py  market_household.py  market_indicators.py  market_indicators_catalog.py  market_intel_agent.py  market_intel_products.py  market_matcher.py  market_mcp.py  market_mcp_registry.py  market_missions.py  market_observatory.py  market_procurement_bulk.py  market_quality.py  market_receipts.py  market_regulatory.py  (+16 more)
ops/: HANDOFF-COST-OF-LIVING.md  PRD-COST-OF-LIVING-OS-MODULES.md  PRD-COST-OF-LIVING-OS.md  PUBLIC-MESSAGE-ALIGNMENT-PLAN.md  WORLD_CHANGES.md  after_core_1.11.1_published.sh  after_core_1.11.3_published.sh  export_mcp_registry_csv.py  patch_vtex_206.py
ops/ecosystem-patches/: APPLY-WORLD-INTEL-ALERTS-FIX.md  APPLY-WORLD-INTEL-ROUTER-FIX.md  APPLY-WORLD-MOUNT-API-ROUTES.md  APPLY-WORLD-OPTIMIZE.md  APPLY-WORLD-PHASE0-MARKETING.md  APPLY-WORLD-PHASE1-MARKETING.md  APPLY-WORLD-PYPI-1.11.0.md  APPLY-WORLD-PYPI-1.11.1.md  APPLY-WORLD-PYPI-1.11.3.md  APPLY.md  BUMP-CORE-1.11.0.md  BUMP-CORE-1.11.3.md  BUMP-CORE-1ed299e.md  BUMP-CORE-8469854.md  cli-market-backend-core-1ed299e.patch  cli-market-backend.patch  cli-market-content.patch  cli-market-world-1.11.3.patch  cli-market-world-collector-p0.patch  cli-market-world-intel-alerts-fix.patch  cli-market-world-mount-api-routes.patch  cli-market-world-optimize.patch  cli-market-world-phase0-marketing.patch  cli-market-world-phase1-marketing.patch  cli-market-world-pypi-1.11.0.patch  cli-market-world-pypi-1.11.1.patch  cli-market-world.patch  deploy-collector-world.ps1  deploy-collector-world.sh  deploy-v2.ps1  deploy-v2.sh  deploy-world-1.11.3.sh  deploy-world-intel-alerts-fix.sh  deploy-world-intel-router-fix.sh  deploy-world-optimize.sh  deploy-world-pypi-1.11.1.sh  procure-copilot.patch
scripts/: gen_shims.py  patch_lines.py  verify_retailer_product_urls.py
tests/: __init__.py  conftest.py  test_andean_panel.py  test_api_routes_wave1.py  test_api_routes_wave2.py  test_api_routes_wave3.py  test_api_routes_wave4.py  test_auth_tokens.py  test_billing_update.py  test_commerce_capabilities.py  test_dashboard.py  test_data_v1_service.py  test_demo_tokens.py  test_enrich_fetchers.py  test_food_basket_match.py  test_gmail_drafts.py  test_golden_taxonomy.py  test_health_stats.py  test_http_retry.py  test_intel_brief.py  test_intel_jobs.py  test_line_canonical.py  test_market_connectors.py  test_market_core.py  test_market_core_utilities.py  test_market_db_layer.py  test_market_enrich_sources_unit.py  test_market_geo_currency.py  test_market_indicators_compute.py  test_market_indicators_extended.py  test_market_indicators_refresh.py  test_market_intel_products.py  test_market_matcher.py  test_market_mcp_rpc.py  test_market_missions.py  test_market_quality.py  test_market_services.py  test_market_slas.py  test_market_spread.py  test_market_units.py  (+23 more)
