[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-market-core"
version = "0.1.0"
description = "Shared core library for CLI Market services"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CLI Market", email = "hello@cli-market.dev"}]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "playwright>=1.45.0",
]

[tool.setuptools]
py-modules = [
    "dashboard_glossary", "dashboard_quality", "dashboard_renderer",
    "dashboard_view_model", "data_v1_service", "market_alerts",
    "market_basket", "market_billing", "market_core", "market_db",
    "market_enrich_sources", "market_enrich_subcategory",
    "market_health_alert", "market_indicators", "market_intel_agent",
    "market_mcp", "market_security", "market_spread", "market_stats",
    "market_stores", "market_units", "price_confidence",
    "retailer_onboarding", "source_health", "store_credentials",
]
packages = ["market_connectors"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9", "W6", "B"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
