[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-market-core"
version = "1.8.0"
description = "Shared core library for CLI Market services"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CLI Market", email = "hello@cli-market.dev"}]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "playwright>=1.45.0",
]

[tool.setuptools]
py-modules = ["store_credentials", "market_stats", "retailer_onboarding"]

[tool.setuptools.packages.find]
include = ["market_core*", "market_connectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=market_core --cov=market_connectors --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9", "W6", "B"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
