[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-market-core"
version = "1.9.27"
description = "CLI Market intelligence layer — indicators, billing, MCP primitives, and retailer connectors. Dependency of cli-market-world."
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CLI Market", email = "hello@cli-market.dev"}]
readme = "README.md"
keywords = ["vtex", "mcp", "ai-agents", "ecommerce", "cli", "retail", "commerce"]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "playwright>=1.45.0",
]

[project.urls]
Homepage = "https://cli-market.dev"
Documentation = "https://cli-market.dev/docs"
"MCP Tools" = "https://cli-market.dev/tools"
PyPI = "https://pypi.org/project/cli-market-world/"
Support = "https://cli-market.dev/docs"

[tool.setuptools]
py-modules = [
    "store_credentials",
    "market_stats",
    "retailer_onboarding",
    "market_security",
    "market_alerts",
    "market_basket",
    "market_spread",
    "market_units",
    "market_db",
    "market_indicators",
    "market_enrich_subcategory",
    "market_billing",
    "market_mcp",
    "market_intel_agent",
    "market_health_alert",
    "market_enrich_sources",
    "data_v1_service",
    "dashboard_glossary",
    "dashboard_quality",
    "dashboard_renderer",
    "dashboard_view_model",
    "source_health",
    "price_confidence",
]

[tool.setuptools.packages.find]
include = ["market_core*", "market_connectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=market_core --cov=market_connectors --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9", "W6", "B"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
